WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
209794
REGRESSION (
r251574
,
r251600
): _WKTextManipulationToken and _WKTextManipulationConfiguration are missing -dealloc
https://bugs.webkit.org/show_bug.cgi?id=209794
Summary
REGRESSION (r251574, r251600): _WKTextManipulationToken and _WKTextManipulati...
David Kilzer (:ddkilzer)
Reported
2020-03-30 20:06:26 PDT
_WKTextManipulationToken and _WKTextManipulationConfiguration are missing -dealloc. The clang static analyzer reports: @implementation _WKTextManipulationToken '_WKTextManipulationToken' lacks a 'dealloc' instance method but must release '_identifier' and others @implementation _WKTextManipulationConfiguration '_WKTextManipulationConfiguration' lacks a 'dealloc' instance method but must release '_exclusionRules'
Attachments
Patch v1
(2.20 KB, patch)
2020-03-30 20:15 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2020-03-30 20:15:06 PDT
Created
attachment 395011
[details]
Patch v1
Radar WebKit Bug Importer
Comment 2
2020-03-30 20:15:50 PDT
<
rdar://problem/61087266
>
Wenson Hsieh
Comment 3
2020-03-30 20:19:51 PDT
Comment on
attachment 395011
[details]
Patch v1 We usually solve this problem with RetainPtr, but this works too.
David Kilzer (:ddkilzer)
Comment 4
2020-03-30 21:21:39 PDT
(In reply to Wenson Hsieh from
comment #3
)
> Comment on
attachment 395011
[details]
> Patch v1 > > We usually solve this problem with RetainPtr, but this works too.
After we switch to compiling with ARC, won't we just de-RetainPtr<> the class again because it's no longer necessary?
EWS
Comment 5
2020-03-30 22:23:02 PDT
Committed
r259280
: <
https://trac.webkit.org/changeset/259280
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 395011
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug