REGRESSION (r251574, r251600): _WKTextManipulationToken and _WKTextManipulationConfiguration are missing -dealloc <https://webkit.org/b/209794>

Reviewed by Wenson Hsieh.

* UIProcess/API/Cocoa/_WKTextManipulationConfiguration.mm:
(-[_WKTextManipulationConfiguration dealloc]): Add.
* UIProcess/API/Cocoa/_WKTextManipulationToken.mm:
(-[_WKTextManipulationToken dealloc]): Add.


Canonical link: https://commits.webkit.org/222715@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259280 268f45cc-cd09-0410-ab3c-d52691b4dbfc